Extra properties used in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
+spring.social.facebook.appId=YOUR_APP_ID
+spring.social.facebook.appSecret=YOUR_APP_SECRET
+
+local.cookieName=app_name_cookie
+local.encryption.password=iOZ!YXed!VFxxsFMJkJqv3itM6xdfO4*Jz8m8eNW
+local.encryption.hexSalt=6c0744940b5c369c
+
+server.port=8443
+server.ssl.key-store=keystore.p12
+server.ssl.key-store-password=facebooktest
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=facebooktest
+
 security.user.password=test
 security.user.name=test
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
-
-server.port: 8443
-server.ssl.key-store: keystore.p12
-server.ssl.key-store-password: facebooktest
-server.ssl.keyStoreType: PKCS12
-server.ssl.keyAlias:facebooktest
